fix a few 4-up layout issues; fix some button behavior

--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -6,29 +6,28 @@
     position: relative
     text-align: center
 
-  .marking-surface
-    //background: MEDIUM_GRAY
-    display: grid
-    //border-style: thin solid 
-    border: solid 1px black
-    margin: 5px 5px
+  .flicker
+    margin-left: auto
+    margin-right: auto
+    width: 512px
 
-    //display: block
+  .four-up
+    background: black
+    margin-left: auto
+    margin-right: auto;
+    width: 1028px
+    height: 1028px
+
+  .marking-surface
+    display: inline-block
+    float: left
+    margin-left: auto
+    margin-right: auto
+    padding: 1px 1px
     height: 512px
     width: 512px
-    //margin: 0 auto
     max-height: 100%
     max-width: 100%
-    .flicker
-      display: block
-    .four-up 
-      display: grid
-      //grid-template-columns: auto minmax(min-content, 1fr)
-      //grid-template-rows:    auto minmax(min-content, 1fr)
-      //.classifier-svg-root-1 { grid-column: 1, grid-row: 1 }
-      //.classifier-svg-root-2 { grid-column: 2, grid-row: 1 }
-      //.classifier-svg-root-3 { grid-column: 1, grid-row: 2 }
-      //.classifier-svg-root-4 { grid-column: 2, grid-row: 2 }
  
   .marking-tool-root
     opacity: 1
